syntax = "proto3";
package rendezvous_hashing;
option go_package = ".";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

service Node {
  rpc Health(google.protobuf.Empty) returns (HealthResponse) {}
  rpc Info(google.protobuf.Empty) returns (stream InfoResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}

service Cluster {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}

enum Health {
  DEFAULT = 0;
  ONLINE = 1;
}

message HealthResponse {
  string node_id = 1;
  Health status = 2;
  google.protobuf.Duration uptime = 3;
}

message InfoResponse {
  string node_id = 1;
  google.protobuf.Duration uptime = 2;
  repeated string online_nodes = 3;
  repeated string keys = 4;
}

message GetRequest {
  string key = 1;
}
message GetResponse {
  Entry entry = 1;
}

message SetRequest {
  Entry entry = 1;
}
message SetResponse { }

message Entry {
  string key = 1;
  string value = 2;
}
